<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ProfileManagment">

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/userName"/>

            <EditText
                android:id="@+id/userNameEditText"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="30dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

<!--        Date of birth-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/dob"/>

            <EditText
                android:id="@+id/dobEditText"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <!--        Password field-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/password"/>

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/gender"/>

            <RadioButton
                android:id="@+id/maleRadio"
                android:layout_marginLeft="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"/>


            <RadioButton
                android:id="@+id/femaleRadio"
                android:layout_marginLeft="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"/>

        </LinearLayout>


        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >

                <Button
                    android:id="@+id/updateProfileBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update"


                    />
            <Button
                android:id="@+id/registerProfileBtn"
                android:layout_marginLeft="20dp"
                android:layout_toEndOf="@+id/updateProfileBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regProfile"
                android:layout_centerInParent="true"

                android:layout_toRightOf="@+id/updateProfileBtn" />

        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>